--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@ body {
 }
 
 /* ----------------- HEADER PART ----------------- */
+
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 70px;
+}
+
 header {
     height: 69px;
     display: flex;
@@ -59,4 +68,35 @@ li {
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+
+/* -------- TEA OF THE MONTH -------- */
+
+
+.clip-image {
+    width: 300px;
+    height: 200px;
+}
+
+.tea-of-the-month {
+    width: 1000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.heading-tea-of-the-month {
+    text-align: center;
+}
+
+.clip {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.single-clip {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
