--- a/style.css
+++ b/style.css
@@ -65,8 +65,7 @@ li {
     position: absolute;
     top: 40%;
     width: 100%;
-    display: flex;
-    flex-direction: column;
+
     text-align: center;
 }
 
@@ -99,4 +98,33 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+/* --------- LOCATIONS ---------- */
+
+.locations {
+    width: 1200px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    position: relative;
+    text-align: center;
+    align-items: center;
+}
+
+.inside-location-bgImg {
+    position: absolute;
+    top: 40%;
+}
+
+.locations-cards {
+    display: flex;
+    gap: 40px;
+}
+
+.locations-card {
+    width: 300px;
+    background-color: black;
+    opacity: 0.86;
 }
